# ML-examples

./: README.md
cmsis-pack-examples/: README.md
ethos-u-corstone-300/: README.md
kleidiai-examples/audiogen-et/: .gitignore  README.md  export_sao.py  model.py
kleidiai-examples/audiogen-et/app/: CMakeLists.txt  README.md  main.cpp
kleidiai-examples/audiogen-et/scripts/: README.md  export_sao.py  model.py
kleidiai-examples/audiogen/app/: CMakeLists.txt  README.md  audiogen.cpp
kleidiai-examples/audiogen/scripts/: export_dit_autoencoder.py
pytorch-conformer-train-quantize/: README.md  build_sp_128_librispeech.py  evaluate.py
pytorch-conformer-train-quantize/post_training_quantization/: README.md  ptq_evaluate_conformer_10M.py
pytorch-conformer-train-quantize/training/: README.md  requirements.txt  train.py
rnn-unrolling-tflite/: README.md
